# git-branch-cleanup

./: AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
docs/plans/: 2026-03-03-initial-plan.md
src/git_branch_cleanup/: __init__.py  app.py  git.py  github.py  main.py  models.py
tests/: test_app.py  test_git.py  test_github.py  test_main.py  test_models.py
