[project]
name = "git-branch-cleanup"
version = "0.1.0"
description = "TUI program for cleaning up merged git branches with handling for squash-and-merge"
readme = "README.md"
authors = [
    { name = "Jay Qi", email = "jayqi@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
  "gitpython",
  "textual",
]

[project.scripts]
git-branch-cleanup = "git_branch_cleanup.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-asyncio",
  "coverage",
  "pytest-cov",
]

## TOOLS

[tool.ruff]
line-length = 99
src = ["src/git_branch_cleanup/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["git_branch_cleanup"]
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=git_branch_cleanup --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["git_branch_cleanup"]
# debug = ["pathmap"]  # Useful if path mapping isn't working as expected

[tool.coverage.paths]
git_branch_cleanup = [
  "src/git_branch_cleanup/",
  "*/site-packages/git_branch_cleanup/"
]
